# Moira

./: .readthedocs.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  Randomizer.cpp  Sandbox.cpp  Sandbox.h  TestCPU.cpp  TestCPU.h  Testrunner.cpp  Testrunner.h  about.html  config.h  globals.h  impressum.html  index.html  main.cpp  moira.cpp  moira.html  musashi.cpp  musashi.h  news.html  testrunner.cpp  testrunner.h  vamiga.html
.github/workflows/: ccpp.yml  cmake-mingw.yml  cmake-msvc.yml  cmake-multi-platform.yml  cmake-ubuntu.yml
Bartman/: dasm.js  package-lock.json  package.json  tsconfig.json
Binutils/: CmakeLists_rename.txt  m68k-dis.c  m68k-dis.h  m68k-main.cpp  m68k-opc.c  m68k.h
Cputester/: README.md
Cputester/ADF/address/A/: atADDA.W.adf  atANDSR.B.adf  atASL.W.adf  atASLW.W.adf  atASR.W.adf
Cputester/ADF/address/B/: atBSR.B.adf
Cputester/ADF/address/C/: atCMP.L_1.adf  atCMPM.B.adf  atCMPM.W.adf
Cputester/ADF/address/E/: atEOR.B.adf  atEOR.W.adf  atEXT.L.adf
Cputester/ADF/address/L/: atLSL.B.adf  atLSL.W.adf
Cputester/ADF/address/M/: atMOVE0.W.adf  atMOVE2.L.adf  atMOVE2.W.adf  atMOVE3.W.adf  atMOVE4.L.adf  atMOVE5_2.L.adf  atMOVE5_3.L.adf  atMOVE5_3.W.adf  atMOVE6_2.W.adf  atMOVE6_3.W.adf  atMOVE7.L.adf  atMOVE8.L.adf  atMOVEA.L_3.adf  atMVMEL.L.adf  atMVMEL.W.adf  atMVPMR.L.adf  atMVUSP2R.L.adf
Cputester/ADF/address/N/: atNEG.L.adf
Cputester/ADF/address/O/: atOR.B.adf  atOR.L_1.adf  atOR.L_2.adf
Cputester/ADF/address/P/: atPEA.L.adf
Cputester/ADF/address/R/: aRTE.adf  atROL.B.adf  atRORW.W.adf
Cputester/ADF/address/S/: atSTOP.adf  atSUB.L_1.adf  atSUB.W_4.adf
Cputester/ADF/address/T/: atTAS.B.adf  atTST.W.adf
Cputester/ADF/address/U/: atUNLK.L.adf
Cputester/ADF/basic/A/: ADD.B.adf  ADD.L.adf  ANDSR.B.adf  ASL.W.adf
Cputester/ADF/basic/C/: CHK.W.adf  CLR.L.adf  CMP.L.adf  CMP.W.adf  CMPA.L.adf  CMPM.W.adf
Cputester/ADF/vector/: vCHK.W.adf  vDIVU.W.adf  vMVR2USP.L.adf  vTRAPV.adf
Cputester/HDF/tools/: createhdf.sh
Cputester_renamed/ADF/cycles/: README.md
Cputester_renamed/ADF/vector/: vILLEGAL.adf  vMV2SR.W.adf  vMVUSP2R.L.adf  vTRAP.adf  viEXT.W.adf  viNOP.adf
Cputester_renamed/HDF/: README.md
Docs/: .gitignore  conf.py  index.rst
Docs/Doxygen/: Doxyfile  header.html
Docs/Explanations/: InstructionHandlers.md
Docs/HowTo/: HowToCPU.md  HowToOverclock.md  HowToOverclockTheCpu.md  HowToUseDelegates.md  HowToUseTheCpu.md  HowToUseTheDebugger.md  HowToUseTheDisassembler.md
Docs/Overview/: About.md
Docs/References/: ConfigOptions.md
Docs/Tutorials/: GettingStarted.md  UsingMoiraInYourOwnApp.md
Docs/_build/doctrees/: environment.pickle  index.doctree
Docs/_build/html/: .buildinfo  index.html  objects.inv  search.html  searchindex.js
Docs/_static/: custom.css
Docs/_templates/sections/: header.html
M68k/: CMakeLists.txt  m68k_disasm.cpp  m68k_disasm.h
Moira/: CMakeLists.txt  CPU.cpp  LICENSE  Makefile  Moira.cpp  Moira.h  Moira68010_cpp.h  MoiraALU.h  MoiraALU_cpp.h  MoiraBase.cpp  MoiraBase.h  MoiraConfig.h  MoiraDasm.cpp  MoiraDasm.h  MoiraDasm.tpp  MoiraDasmFPU_cpp.h  MoiraDasmMMU_cpp.h  MoiraDasm_cpp.h  MoiraDataflow.h  MoiraDataflow_cpp.h  MoiraDebugger.cpp  MoiraDebugger.h  MoiraDelegate.cpp  MoiraDelegate.h  MoiraExceptions.h  MoiraExceptions_cpp.h  MoiraExec.cpp  MoiraExec.h  MoiraExec.tpp  MoiraExecFPU_cpp.h  MoiraExecMMU_cpp.h  MoiraExec_cpp.h  MoiraInit.cpp  MoiraInit.h  MoiraInit.tpp  MoiraInit_cpp.h  MoiraLogic.cpp  MoiraLogic.h  MoiraLogic.tpp  MoiraLogic_cpp.h  (+20 more)
Moira.xcodeproj/: project.pbxproj
Moira.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Moira.xcodeproj/xcshareddata/xcschemes/: Moira.xcscheme
Moira/softfloat/: softfloat-macros  softfloat.h
Musashi/: CMakeLists.txt  Makefile  Sandbox.cpp  Sandbox.h  m68kconf.h  m68kcpu.c  m68kcpu.h  m68kdasm.c  m68kfpu.c  m68kops.c
Musashi/musashi_softfloat/: musashi_softfloat.h
Runner/: CMakeLists.txt  Randomizer.cpp  Randomizer.h  Sandbox.cpp  Sandbox.h  TestCPU.cpp  TestCPU.h  Testrunner.cpp  Testrunner.h  config.h  musashi.cpp
Runner/Bartman/: dasm.js  dasm.ts
Runner/Binutils/: CMakeLists.txt  m68k-dis.c  m68k.h
Runner/Musashi/: CMakeLists.txt  m68kconf.h  m68kdasm.c  m68kops.c
Runner/Musashi/musashi_softfloat/: musashi_milieu.h  musashi_softfloat.c
assets/css/: main.css
cputester/ADF/basic/: cputester-2.7z  createadf.sh
cputester/ADF/vector/: vDIVS.W.adf  vORSR.W.adf  viEXT.L.adf  viSWAP.W.adf
cputester/HDF/tools/: cputest  cputestgen.ini
docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/Explanations/: InstructionHandlers.html  MainExecutionFunction.html
docs/HowTo/: HowToCPU.html  HowToDebugger.html  HowToDelegation.html  HowToDisassembler.html  HowToOverclockTheCpu.html  HowToUseDelegates.html  HowToUseTheCpu.html  HowToUseTheDebugger.html  HowToUseTheDisassembler.html
docs/Overview/: About.html
docs/Reference/: ConfigOptions.html
docs/References/: ConfigOptions.html
docs/Tutorials/: GettingStarted.html  UsingMoiraInYourOwnApp.html
docs/_sources/: index.rst.txt
docs/_sources/Explanations/: InstructionHandlers.md.txt  MainExecutionFunction.md.txt
docs/_sources/HowTo/: HowToDebugger.md.txt  HowToDisassembler.md.txt
docs/_sources/Overview/: About.md  About.md.txt
docs/_sources/Tutorials/: GettingStarted.md  UsingMoiraInYourOwnApp.md.txt
docs/_static/: custom.css
osd/: osd_linux.c
portable68/: README.txt  exception.h  memoryblock.h  results.cpp  results.h  tester.cpp  tester.h
portable68/68k/: 68k.cpp  68k.h  exception.cpp  licence.txt  mem.h  opcodes.t.h  regs.h  rotate.t.h  shift.t.h
portable68/lib/: dataTypes.h  helper.h
portable68/testcases/: abcd.cpp  add.cpp  adda.cpp  addi.cpp  addq.cpp  addx.cpp  and.cpp  andi.cpp  andiccr.cpp  andisr.cpp  asl.cpp  asr.cpp  bcc.cpp  bchg.cpp  bclr.cpp  bra.cpp  bset.cpp  bsr.cpp  btst.cpp  chk.cpp  clr.cpp  cmp.cpp  cmpa.cpp  cmpi.cpp  cmpm.cpp  dbcc.cpp  divs.cpp  divu.cpp  eor.cpp  eori.cpp  eoriccr.cpp  eorisr.cpp  exg.cpp  ext.cpp  jmp.cpp  jsr.cpp  lea.cpp  link.cpp  lsl.cpp  lsr.cpp  (+40 more)
(+502 files in other folders)
